--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,31 @@ jobs:
           activate-environment: swe4s
           environment-file: environment.yml
       - run: pycodestyle $(git ls-files "*.py")
+  run_unit_tests:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: swe4s
+          environment-file: environment.yml
+      - run: |
+          cd testing/unit_testing
+          python -m unittest test_my_utils.py
+  run_functional_tests:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: swe4s
+          environment-file: environment.yml
+      - run: |
+          cd testing/functional_testing
+          test_print_fires.sh
